<resources>
    <string name="app_name">IMC 2.0</string>
    <string name="calculate">Calculate</string>
    <string name="bmi">BMI</string>
    <string name="login">LOGIN</string>
    <string name="your_email">Your e-mail</string>
    <string name="your_pass">Your password</string>
    <string name="new_user">Sign up</string>
    <string name="logo_name">SENAI</string>
    <string name="registration">New user registration</string>
    <string name="cadastro_name">Name:</string>
    <string name="cadastro_email">E-mail:</string>
    <string name="cadastro_pass">Password:</string>
    <string name="cadastro_weight">Weight:</string>
    <string name="cadastro_height">Height:</string>
    <string name="cadastro_button">Sign up</string>
    <string name="bmi_calculate_result">This is your BMI result</string>
    <string name="bmi_calculate_calculate">Lets calculate your Body Mass Index right now!</string>
    <string name="under">Under ideal weight</string>
    <string name="ideal">Ideal weight, congratulations!</string>
    <string name="more_ideal">You are barely overweight</string>
    <string name="overweight1">overweight 1</string>
    <string name="overweight2">overweight 2</string>
    <string name="overweight3">overweight 3</string>



</resources>