<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_gradient"
    tools:context=".BmiActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="12dp"
        android:text="@string/bmi"
        android:textColor="@color/red_senai"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/bmi_calculate_calculate"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/red_senai_transparent"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.46">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/cadastro_height"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textHeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cadastro_weight"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textWeight"
            app:layout_constraintStart_toStartOf="@+id/textHeight"
            app:layout_constraintTop_toBottomOf="@+id/textHeight" />

        <EditText
            android:id="@+id/textHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_background"
            android:ems="10"
            android:inputType="numberDecimal"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <EditText
            android:id="@+id/textWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_background"
            android:ems="10"
            android:inputType="number"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="@+id/textHeight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:padding="8dp"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textWeight"
            app:layout_constraintTop_toBottomOf="@+id/textWeight" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Username"
        android:textColor="@color/red_senai"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="22dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/black_senai"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/logo_name"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="email@usuario.com"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textViewUsername"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/cadastro_weight"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textViewHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewUsername"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_height"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEmail"
        app:layout_constraintEnd_toEndOf="@+id/textViewWeight"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeight" />
</androidx.constraintlayout.widget.ConstraintLayout>